Added support for easy/medium/hard grids & added functionality

--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -167,12 +167,21 @@ body{
 h3{
     margin: auto;
 }
+
 #easy-grid {
     display: grid;
     grid-template-columns: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px ;
     
-    /* background-color: black; */
-    /* padding: 5px; */
+  }
+
+  #medium-grid {
+    display: grid;
+    grid-template-columns: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
+  }
+
+  #hard-grid {
+    display: grid;
+    grid-template-columns: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
   }
 
   .element {
