--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -219,6 +219,7 @@ background-color: lightgreen;
     justify-content: center;
     align-content: center;
     flex-direction: column;
+    min-height: 50vh;
 }
 .menuItem{
     display: flex;
