slight css changes

--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -107,7 +107,7 @@ body{
     border-color: green;
     margin: 10px;
     flex-direction: column;
-    min-width: 80vw;
+    /* min-width: 80vw; */
     min-height: 60vh;
 }
 
