--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -80,6 +80,7 @@ body{
     flex-direction: column;
     /* get the side nav to show no   */
 }
+
 .sideLi{
     display: flex;
     text-align: center;
@@ -87,6 +88,7 @@ body{
     border-bottom: 2px rgb(59, 55, 55) solid;
     border-width: 2px;
 }
+
 .sideLi:hover{
     background-color: #9bb7d0;
 }
@@ -120,17 +122,21 @@ body{
     border-radius: 4px;
     justify-content: space-between;
 }
+
 #timer{
     display: flex;
     margin: 4px;
 }
+
 .timer{
     display: flex;
 }
+
 #word{
     display: flex;
     margin: 4px;
 }
+
 .wordBox{
     display: flex;
     border: solid;
@@ -150,6 +156,7 @@ body{
     /* min-width: 650px;
     min-height: 700px; */
 }
+
 .wordList{
     display: flex;
     background: whitesmoke;
@@ -198,9 +205,11 @@ background-color: lightgreen;
 #easy-grid:hover{
     cursor: pointer;
 }
+
 #medium-grid:hover{
     cursor: pointer;
 }
+
 #hard-grid:hover{
     cursor: pointer;
 }
@@ -221,6 +230,7 @@ background-color: lightgreen;
     flex-direction: column;
     min-height: 50vh;
 }
+
 .menuItem{
     display: flex;
     justify-content: center;
@@ -234,9 +244,16 @@ background-color: lightgreen;
     border-width: 1px;
     border-color: purple;
     margin: 10px;
+    padding: 10px;
     justify-self: flex-start;
-    flex-basis: auto;
+    /* flex-basis: 1 1 auto; */
+    min-height: 40vh;
+    max-height: 80vh;
     /* align-self: flex-end; */
+}
+
+.wordListLi{
+    padding-left: 4px;
 }
 
 
