Added Menu Changes

--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -256,6 +256,30 @@ background-color: lightgreen;
     padding-left: 4px;
 }
 
+#configDesc{
+    border: lightslategray;
+    border-width: 2px;
+    border-style: solid;
+    
+}
+
+#difficulty{
+    background-color: lightsteelblue;
+    border-color: grey;
+    border-width: 5px;
+    border-style: solid;
+    margin: 50px;
+    font-size: 150%;
+}
+
+#submitConfig{
+    display: block; 
+    margin: 0 auto;
+    padding: 15px 32px;
+    background-color: green;
+    color: white;
+    font-size: 18px;
+}
 
 /* theme
 #eafffa
