--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -202,6 +202,14 @@ text-align: center;
 background-color: lightgreen;
 }
 
+.completedWord{
+ color: green;  
+}
+
+.solved{
+    background-color: green;
+}
+
 #easy-grid:hover{
     cursor: pointer;
 }
